# OOP-Templates

Modelview/Test/: CMakeLists.txt  main.cpp
Modelview/Test/Domain/: Filter.cpp  Filter.h  Item.cpp  Item.h
Modelview/Test/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ProxyTableModel.cpp  ProxyTableModel.h  TableModel.cpp  TableModel.h
Modelview/Test/Repo/: Repo.cpp  Repo.h
Modelview/Test/Service/: Service.cpp  Service.h
Observer/Test/: CMakeLists.txt  README.md  main.cpp
Observer/Test/GUI/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TableModel.cpp  TableModel.h
Observer/Test/domain/: Item.cpp  Item.h
Observer/Test/observer/: Observable.h  Observer.cpp  Observer.h
Observer/Test/repository/: Repo.cpp  Repo.h
Observer/Test/service/: Service.cpp  Service.h
